# Command_parser

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  CommandBar.cpp  CommandBar.hpp  CommandLog.cpp  ItemsToolBar.cpp  ItemsToolBar.hpp  MainWindow.cpp  MainWindow.hpp  PowerPoint.cpp  PowerPoint.hpp  PowerPoint.pro  README.md  Rect.cpp  Rect.hpp  WorkingArea.cpp  calculator.cpp  calculator.hpp  command.hpp  commandCreator.cpp  commandCreator.hpp  commandRegistry.cpp  commandRegistry.hpp  command_parser.cpp  command_parser.hpp  concrete_commnads.hpp  consoleIO.cpp  consoleIO.hpp  controller.cpp  controller.hpp  director.cpp  director.hpp  document.cpp  document.hpp  factoryRegistry.cpp  factoryRegistry.hpp  icons.qrc  ioInterface.hpp  (+9 more)
cli/: Argument.cpp  Argument.hpp  commandCreator.cpp  commandCreator.hpp  commandRegistry.cpp  commandRegistry.hpp  controller.cpp  controller.hpp  factoryRegistry.cpp  factoryRegistry.hpp  itemRegistry.hpp  tokenizer.cpp  tokenizer.hpp
command_factories/: AddFactory.cpp  AddFactory.hpp  ChangeFactory.cpp  ChangeFactory.hpp  CreateFactory.cpp  CreateFactory.hpp  DisplayFactory.cpp  ListFactory.cpp  ListFactory.hpp  LoadFactory.cpp  LoadFactory.hpp  QuitFactory.cpp  RemoveFactory.cpp  RemoveFactory.hpp  SaveFactory.hpp  commandFactory.hpp
commands/: AddCommand.cpp  AddCommand.hpp  ChangeItemCommand.cpp  ChangeItemCommand.hpp  ChangeSlideCommand.cpp  ChangeSlideCommand.hpp  CreateCommand.cpp  CreateCommand.hpp  DisplayCommand.cpp  ListCommand.hpp  LoadCommand.cpp  LoadCommand.hpp  QuitCommand.cpp  QuitCommand.hpp  RemoveCommand.cpp  RemoveCommand.hpp  SaveCommand.cpp  SaveCommand.hpp  command.hpp
concrete_commands/: AddCommand.cpp  AddCommand.hpp  AndCommand.cpp  AndCommand.hpp  ChangeItemCommand.hpp  (+27 more)
(+176 files in other folders)
